--- a/index.html
+++ b/index.html
@@ -288,7 +288,6 @@
   </p>
 </div> <!--end Container section-->
 
-
 <div id="reviews" class="container">
   <h3 class="text-center">Sample Reviews</h3>  
   <ul class="nav nav-tabs">
@@ -298,10 +297,12 @@
   </ul>
   <div class="tab-content">
     <div id="home" class="tab-pane fade in active">
-      <p>Adam and I studied together at Purdue University in the then-nascent field of virtual reality. Adam was consistently out in front on the vision side of things, able to conceptualize applications for our technology that were not only interesting but useful. He has that rare combination of energetic creativity coupled with rigorous technical skills. During our studies he was as comfortable working through difficult statistical proofs as he was sketching animated characters for a game. Further, his background in the life sciences provides him a researcher's eye for logic, critical thinking, and managing complex, interacting systems. He is also a tireless collaborator, willing to put in the hours required to make a difficult project successful. Lastly, he is friendly, funny, and personable - an outstanding team member who is a pleasure to work with.</p>
+      	<p>Adam and I studied together at Purdue University in the then-nascent field of virtual reality. Adam was consistently out in front on the vision side of things, able to conceptualize applications for our technology that were not only interesting but useful. He has that rare combination of energetic creativity coupled with rigorous technical skills. During our studies he was as comfortable working through difficult statistical proofs as he was sketching animated characters for a game. Further, his background in the life sciences provides him a researcher's eye for logic, critical thinking, and managing complex, interacting systems. He is also a tireless collaborator, willing to put in the hours required to make a difficult project successful. Lastly, he is friendly, funny, and personable - an outstanding team member who is a pleasure to work with.</p>
     </div>
     <div id="menu1" class="tab-pane fade">
-      <p>Adam's greatest strength is his ability to work with others. He carries an enthusiasm for his work that's contagious and improves the work (and attitudes) of those around him. I never had a disagreement with Adam during the two years that we worked closely together. He has a great way of making those around him feel valued and appreciated for their contribution to the effort. </p>
+	<p>I had the pleasure of working with Adam for just over two years at Florida State University's Learning Systems Institute. During that time, Adam served as a producer for the documentary series Perspectives, and acted as content coordinator for over 60 short films ranging in topics from aeronautics, marine biology, chemistry, ecology in the Kenyan savannah, and even candy making to name a few. In total, Adam served as content lead for over 300 short films in the Perspectives series.</p>
+	<p>Adam took great pride in his work with the film series. Every project was met with an enthusiasm to create the best possible learning experience for the user. He also recognized the importance of production quality, and actively sought projects that pushed the creative limits of the production team.</p>      
+	<p>Adam's greatest strength is his ability to work with others. He carries an enthusiasm for his work that's contagious and improves the work (and attitudes) of those around him. I never had a disagreement with Adam during the two years that we worked closely together. He has a great way of making those around him feel valued and appreciated for their contribution to the effort. </p>
     </div>
     <div id="menu2" class="tab-pane fade">
       	<p>I have been impressed with his commitment to excellence. In every activity he undertook, Adam ensured he understood his role and how what he did fit into the goal of the program and in the organization. His work ethic was recognized and much admired by all of his colleagues.</p>
