--- a/index.html
+++ b/index.html
@@ -169,7 +169,10 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#myPage">Home</a></li>
         <li><a href="#about">About Me</a></li>
+	<li><a href="#about">Education</a></li>
         <li><a href="#reviews">Reviews</a></li>
+	<li><a href="#about">Publications</a></li>
+	<li><a href="#about">Presentations</a></li>
         <li><a href="#"><span class="glyphicon glyphicon-search"></span></a></li>
       </ul>
     </div>
@@ -285,7 +288,6 @@
     </a>
 </div>
 
-<!-- Container -->
 <div id="about" class="container text-center">
   <h3>About Me</h3>
   <p><em>Science | Interactive 3D Graphics | Art | Gaming | Technology | Education</em></p>
@@ -293,22 +295,12 @@
   <p>
 	Interdisciplinary researcher/developer with experience in quantitative and qualitative research for interactive 3D computer graphics, human spatial ability, data visualization, virtual and augmented reality, serious games, 3D modeling and printing, documentary-style video production and direction, statistical analysis, and K-12 STEM outreach for teacher professional development. Experience connecting people at local, municipal, state, and federal levels to ensure project success. Extensive background in life sciences including plant physiology and molecular biology with associated laboratory techniques. Career interests include human-computer interactions and interfaces, applications of human spatial ability research to gaming and immersive educational experiences, data science and data-driven decision making, advanced data perception methodologies, technology integration for K-12 education, life science outreach, and public informal STEM education.
   </p>
-<br />
+</div> <!--end about container-->
+
+<div id="education" class="container text-center">
   <h3>Education</h3>
   <p><em>PhD, Technology | MS, Technology | MS, Horticulture | BS, Biology</em></p>
-<br />
-  <h3>Presentations</h3>
-<br />
-  <h3>Publications</h3>
-	<p style="text-align:left">Razzouk, R., Dyehouse, M., Santone, A., and Carr, R. L. (2014). Plants versus Pollutants: An interdisciplinary model-eliciting activity to bring engineering design practices and real-world context to the science classroom. The Science Teacher, 81(9), 43-49.</p>
-	<p style="text-align:left">Santone, A. L. (2009). Visuospatial characterization and analysis of spatial abilities of video game players (Doctoral Dissertation). Purdue University, West Lafayette, IN.</p>
-	<p style="text-align:left">Ertmer, P. A., Stepich, D., Flanagan, S., Kocaman-Karoglu, A., Reiner, C., Reyes, L., Santone, A., and Ushigusa, S. (2009). Impact of Guidance on the Problem-Solving Efforts of Instructional Design Novices. Performance Improvement Quarterly, 21(4), 117-132.</p>
-	<p style="text-align:left">Santone, A. L. and McCutcheon, J. A. (2008). Node graph visualizations for eighth-grade mathematics students using a virus transmission simulation. Science Scope, 31(9), 55-59.</p>
-	<p style="text-align:left">Chaturvedi, A., Hsieh, C., Bhatt, T., and Santone, A. (2007). Bio-terror Preparedness Exercise in a Mixed Reality Environment. International Conference on Computational Science, 1, 1106-1113.</p>
-	<p style="text-align:left">Santone, A.L. (2003). Molecular and structural changes in the hypocotyl elongation zone of mechano-stimulated dark-grown (_Glycine max_ L. Merr. cv. Century 84) seedlings (Master's Thesis). Purdue University, West Lafayette, IN.</p>
-
-
-</div> <!--end Container section-->
+</div><!--end education container-->
 
 <div id="reviews" class="container">
   <h3 class="text-center">Sample Reviews</h3>  
@@ -332,7 +324,23 @@
 	<p>It is my belief that you can be assured that he will be as highly committed, work well with others, will be engaged immediately in enabling any team to pursue continuing excellence for future advancement. I recommend Adam, without any reservation.</p>
     </div>
   </div>
-</div>
+</div><!--end reviews container-->
+
+<div id="publications" class="container text-center">
+  <h3>Publications</h3>
+	<p style="text-align:left">Razzouk, R., Dyehouse, M., Santone, A., and Carr, R. L. (2014). Plants versus Pollutants: An interdisciplinary model-eliciting activity to bring engineering design practices and real-world context to the science classroom. The Science Teacher, 81(9), 43-49.</p>
+	<p style="text-align:left">Santone, A. L. (2009). Visuospatial characterization and analysis of spatial abilities of video game players (Doctoral Dissertation). Purdue University, West Lafayette, IN.</p>
+	<p style="text-align:left">Ertmer, P. A., Stepich, D., Flanagan, S., Kocaman-Karoglu, A., Reiner, C., Reyes, L., Santone, A., and Ushigusa, S. (2009). Impact of Guidance on the Problem-Solving Efforts of Instructional Design Novices. Performance Improvement Quarterly, 21(4), 117-132.</p>
+	<p style="text-align:left">Santone, A. L. and McCutcheon, J. A. (2008). Node graph visualizations for eighth-grade mathematics students using a virus transmission simulation. Science Scope, 31(9), 55-59.</p>
+	<p style="text-align:left">Chaturvedi, A., Hsieh, C., Bhatt, T., and Santone, A. (2007). Bio-terror Preparedness Exercise in a Mixed Reality Environment. International Conference on Computational Science, 1, 1106-1113.</p>
+	<p style="text-align:left">Santone, A.L. (2003). Molecular and structural changes in the hypocotyl elongation zone of mechano-stimulated dark-grown (_Glycine max_ L. Merr. cv. Century 84) seedlings (Master's Thesis). Purdue University, West Lafayette, IN.</p>
+</div><!--end Publications container-->
+
+<div id="presentations" class="container text-center">
+  <h3>Presentations</h3>
+</div><!--end Presentations container-->
+
+
 
 <script>
 $(document).ready(function(){
