--- a/index.html
+++ b/index.html
@@ -339,10 +339,10 @@
 <div id="presentations" class="container text-center">
   <h3>Presentations</h3>
 
-<p style="text-align:left">Dec 2015 FCR-STEM Annual Conference; Orlando, FL Perspectives Video Resources for Ecology Topics</p>
-<p style="text-align:left">Oct 2015 Florida Association of Science Teachers (FAST); Tallahassee, FL CPALMS 3D, CPALMS Sensors, CPALMS Perspectives</p>
-<p style="text-align:left">May 2015 Florida Association of Science Supervisors; Orlando, FL CPALMS 3D overview presentation</p>
-<p style="text-align:left">June 2014 Science Math Master(SM2); Tampa, FL Table presentation: CPALMS general program and CPALMS 3D</p>
+<p style="text-align:left">Dec 2015<br/> FCR-STEM Annual Conference; Orlando, FL Perspectives Video Resources for Ecology Topics</p>
+<p style="text-align:left">Oct 2015<br/>  Florida Association of Science Teachers (FAST); Tallahassee, FL CPALMS 3D, CPALMS Sensors, CPALMS Perspectives</p>
+<p style="text-align:left">May 2015<br/>  Florida Association of Science Supervisors; Orlando, FL CPALMS 3D overview presentation</p>
+<p style="text-align:left">June 2014<br/>  Science Math Master(SM2); Tampa, FL Table presentation: CPALMS general program and CPALMS 3D</p>
 <p style="text-align:left">May 2014 FCR-STEM Annual Conference; Fort Lauderdale, FL CPALMS Perspectives, CPALMS Code: Real-time simulations, Maps, Graphs, and More!, CPALMS 3D</p>
 <p style="text-align:left">May 2014 Florida Association of Science Supervisors; Orlando, FL CPALMS Perspectives, CPALMS Code, CPALMS 3D</p>
 <p style="text-align:left">April 2014 National Science Teacher Association 2014; Boston, MA CPALMS Perspectives: STEM Video Resources for Teacher Professional Development Interdisciplinary Model-eliciting Activities Bring Design, Engineering Practices, and RealWorld Context to the Science Classroom</p>
