--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
 	<li data-target="#myCarousel" data-slide-to="7"></li>
 	<li data-target="#myCarousel" data-slide-to="8"></li>
 	<li data-target="#myCarousel" data-slide-to="9"></li>
+	<li data-target="#myCarousel" data-slide-to="10"></li>
     </ol>
 
     <!-- Wrapper for slides -->
@@ -273,6 +274,14 @@
         <div class="carousel-caption">
           <h3>Nature Photographer</h3>
           <p>Interested in the often overlooked aspects of the outdoors</p>
+        </div>     
+      </div>
+
+      <div class="item">
+        <img src="../graphics/img/arduino/lampGuts_1600_900.jpg" alt="Arduino Lamp" width="1600" height="900">
+        <div class="carousel-caption">
+          <h3>Open Hardware/Software Hobbyist</h3>
+          <p>I made a stoneware ceramic lamp base and stuffed it with a temperature sensor and an RGB LED ring controlled by a guitar volume knob.</p>
         </div>     
       </div>
 </div>
