--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <!-- Theme Made By www.w3schools.com - No Copyright -->
-  <title>Bootstrap Theme The Band</title>
+  <title></title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -312,7 +312,7 @@
 
 <p style="text-align:left"><b>Biosensor-controlled Interactive Environments for Virtual Reality</b> | PhD coursework<br /> Collaborated on an interactive and immersive VR environment involving user biofeedback to control a helicopter in an outdoor scene. My colleague created the hardware interface while I created the models, environment, and interactions. A stretch sensor worn around the abdomen allowed the user to drive several inputs for environmental lighting, helicopter altitude, and on-craft lighting.</p>
 <p style="text-align:left"><b>Evaluation of Dead-reckoning Ability in Immersive Virtual Environments</b> | PhD coursework<br /> Collaborated on a simple VR testing environment and corresponding research program to evaluate users' ability to determine distances and positions in a flat scene with several levels of navigational cues. Users were scored on their ability to travel in a prescribed manner using temporary targets and to then return to the origin.</p>
-<p style="text-align:left"><b>In?uence of Interactive Spatial Problem Solving on Spatial Test Performance</b> | PhD coursework<br /> Developed a pilot test to examine the ability of interactive spatial problem solving within game play to influence user scores on standardized spatial ability tests. Users completed game play in between pre-test and post-test evaluation.</p>
+<p style="text-align:left"><b>Influence of Interactive Spatial Problem Solving on Spatial Test Performance</b> | PhD coursework<br /> Developed a pilot test to examine the ability of interactive spatial problem solving within game play to influence user scores on standardized spatial ability tests. Users completed game play in between pre-test and post-test evaluation.</p>
 <p style="text-align:left"><b>Visuospatial Characterization and Analysis of Spatial Abilities of Video Game Players</b> | PhD dissertation<br /> Addressed the taxonomy associated with games used in spatial ability research as well as the connection between game play experience and spatial test performance across groups of players by dominant genre. Self-reported participant data were used to classify games by inherent visuospatial characteristics. These characteristics were then used to cluster users with preferred gameplay. Clusters were then compared to determine differences, if any, across three measures of spatial ability.</p>
 
 </div><!--end education container-->
