--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
         <li><a href="#about">About Me</a></li>
 	<li><a href="#education">Education</a></li>
         <li><a href="#reviews">Reviews</a></li>
+	<li><a href="#outreach">Outreach</a></li>
 	<li><a href="#publications">Publications</a></li>
 	<li><a href="#presentations">Presentations</a></li>
         <li><a href="#"><span class="glyphicon glyphicon-search"></span></a></li>
@@ -340,6 +341,19 @@
     </div>
   </div>
 </div><!--end reviews container-->
+
+
+<div id="reviews" class="container">
+  <h3 class="text-center">Outreach</h3> 
+<p style="text-align:left"><b>Fellow, Graduate Students in K-12 Education (GK-12)</b> | National Science Foundation<br /> 
+Prepared and implemented lesson plans for 8th grade students with focus on data visualization and scienti?c critical thinking skills. My lesson on discovering and visualizing a social network from student-generated simulated virus transmission data was published in a national journal for middle school teachers. 
+</p>
+<p style="text-align:left"><b>Project Counselor, NASA Spaceflight and Life Sciences Training Program (SLSTP)</b> | Tuskeegee University<br /> 
+Assisted with management of a six-week undergraduate research experience at Kennedy Space Center (NASA-KSC) in Cape Canaveral, Florida. Led and provided mentoring to a group of undergraduate students interested in life sciences research in the context of space exploration.
+</p>
+
+</div> <!--end outreach container-->
+
 
 <div id="publications" class="container text-center">
   <h3>Publications</h3>
