--- a/index.html
+++ b/index.html
@@ -343,10 +343,10 @@
 </div><!--end reviews container-->
 
 
-<div id="reviews" class="container">
+<div id="outreach" class="container">
   <h3 class="text-center">Outreach</h3> 
 <p style="text-align:left"><b>Fellow, Graduate Students in K-12 Education (GK-12)</b> | National Science Foundation<br /> 
-Prepared and implemented lesson plans for 8th grade students with focus on data visualization and scienti?c critical thinking skills. My lesson on discovering and visualizing a social network from student-generated simulated virus transmission data was published in a national journal for middle school teachers. 
+Prepared and implemented lesson plans for 8th grade students with focus on data visualization and scientific critical thinking skills. My lesson on discovering and visualizing a social network from student-generated simulated virus transmission data was published in a national journal for middle school teachers. 
 </p>
 <p style="text-align:left"><b>Project Counselor, NASA Spaceflight and Life Sciences Training Program (SLSTP)</b> | Tuskeegee University<br /> 
 Assisted with management of a six-week undergraduate research experience at Kennedy Space Center (NASA-KSC) in Cape Canaveral, Florida. Led and provided mentoring to a group of undergraduate students interested in life sciences research in the context of space exploration.
