--- a/index.html
+++ b/index.html
@@ -311,6 +311,19 @@
   <h3>Education</h3>
   <p><em>PhD, Technology | MS, Technology | MS, Horticulture | BS, Biology</em></p>
 
+<p style="text-align:left"><b>PhD, Technology</b><br/>
+Purdue University, College of Technology (now Purdue Polytechnic Institute). Worked with Gary Bertoline at the Envision Center for Data Perceptualization to explore human spatial perception and its relationship to three varieties of spatial ability test scores among video game players. I also created a visuospatial taxonomy to describe video games for research in that field. 
+</p>
+<p style="text-align:left"><b>MS, Technology</b><br/>
+Purdue University, College of Technology (now Purdue Polytechnic Institute). Worked with Gary Bertoline at the Envision Center for Data Perceptualization to explore the uses and roles of interactive virtual reality technologies for science education.
+</p>
+<p style="text-align:left"><b>MS, Horticulture</b><br/>
+Purdue University, Department of Horticulture and Landscape Architecture. Worked with plant physiologist Cary A. Mitchell and plant molecular biologist Kashchandra G. Raghothama to explore the presence and characterization of touch-induced gene expression in soybean. 
+</p>
+<p style="text-align:left"><b>BS, Biology</b><br/>
+Henderson State University, Department of Biology. Focused my studies on plant biology. Worked with field biologist Daniel Marsh and molecular biologist James Engman on undergraduate research projects. 
+</p>
+
 <p style="text-align:left"><b>Biosensor-controlled Interactive Environments for Virtual Reality</b> | PhD coursework<br /> Collaborated on an interactive and immersive VR environment involving user biofeedback to control a helicopter in an outdoor scene. My colleague created the hardware interface while I created the models, environment, and interactions. A stretch sensor worn around the abdomen allowed the user to drive several inputs for environmental lighting, helicopter altitude, and on-craft lighting.</p>
 <p style="text-align:left"><b>Evaluation of Dead-reckoning Ability in Immersive Virtual Environments</b> | PhD coursework<br /> Collaborated on a simple VR testing environment and corresponding research program to evaluate users' ability to determine distances and positions in a flat scene with several levels of navigational cues. Users were scored on their ability to travel in a prescribed manner using temporary targets and to then return to the origin.</p>
 <p style="text-align:left"><b>Influence of Interactive Spatial Problem Solving on Spatial Test Performance</b> | PhD coursework<br /> Developed a pilot test to examine the ability of interactive spatial problem solving within game play to influence user scores on standardized spatial ability tests. Users completed game play in between pre-test and post-test evaluation.</p>
@@ -362,7 +375,7 @@ Assisted with management of a six-week undergraduate research experience at Kenn
 	<p style="text-align:left">Ertmer, P. A., Stepich, D., Flanagan, S., Kocaman-Karoglu, A., Reiner, C., Reyes, L., <b>Santone, A.</b>, and Ushigusa, S. (2009). Impact of Guidance on the Problem-Solving Efforts of Instructional Design Novices. Performance Improvement Quarterly, 21(4), 117-132.</p>
 	<p style="text-align:left"><b>Santone, A. L.</b> and McCutcheon, J. A. (2008). Node graph visualizations for eighth-grade mathematics students using a virus transmission simulation. Science Scope, 31(9), 55-59.</p>
 	<p style="text-align:left">Chaturvedi, A., Hsieh, C., Bhatt, T., and <b>Santone, A.</b> (2007). Bio-terror Preparedness Exercise in a Mixed Reality Environment. International Conference on Computational Science, 1, 1106-1113.</p>
-	<p style="text-align:left"><b>Santone, A.L.</b> (2003). Molecular and structural changes in the hypocotyl elongation zone of mechano-stimulated dark-grown (_Glycine max_ L. Merr. cv. Century 84) seedlings (Master's Thesis). Purdue University, West Lafayette, IN.</p>
+	<p style="text-align:left"><b>Santone, A. L.</b> (2003). Molecular and structural changes in the hypocotyl elongation zone of mechano-stimulated dark-grown (_Glycine max_ L. Merr. cv. Century 84) seedlings (Master's Thesis). Purdue University, West Lafayette, IN.</p>
 </div><!--end Publications container-->
 
 <div id="presentations" class="container text-center">
