--- a/index.html
+++ b/index.html
@@ -323,7 +323,9 @@ Purdue University, Department of Horticulture and Landscape Architecture. Worked
 <p style="text-align:left"><b>BS, Biology</b><br/>
 Henderson State University, Department of Biology. Focused my studies on plant biology. Worked with field biologist Daniel Marsh and molecular biologist James Engman on undergraduate research projects. 
 </p>
+<br/>
 
+<h3>Related Research</h3>
 <p style="text-align:left"><b>Biosensor-controlled Interactive Environments for Virtual Reality</b> | PhD coursework<br /> Collaborated on an interactive and immersive VR environment involving user biofeedback to control a helicopter in an outdoor scene. My colleague created the hardware interface while I created the models, environment, and interactions. A stretch sensor worn around the abdomen allowed the user to drive several inputs for environmental lighting, helicopter altitude, and on-craft lighting.</p>
 <p style="text-align:left"><b>Evaluation of Dead-reckoning Ability in Immersive Virtual Environments</b> | PhD coursework<br /> Collaborated on a simple VR testing environment and corresponding research program to evaluate users' ability to determine distances and positions in a flat scene with several levels of navigational cues. Users were scored on their ability to travel in a prescribed manner using temporary targets and to then return to the origin.</p>
 <p style="text-align:left"><b>Influence of Interactive Spatial Problem Solving on Spatial Test Performance</b> | PhD coursework<br /> Developed a pilot test to examine the ability of interactive spatial problem solving within game play to influence user scores on standardized spatial ability tests. Users completed game play in between pre-test and post-test evaluation.</p>
