--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Theme Made By www.w3schools.com - No Copyright -->
+  
+<!-- Theme Made By www.w3schools.com - No Copyright -->
+<!-- Bootstrap Theme https://www.w3schools.com/bootstrap/trybs_theme_band_full.htm#contact -->
   <title></title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
