--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
 	<li><a href="#education">Education</a></li>
         <li><a href="#reviews">Reviews</a></li>
 	<li><a href="#outreach">Outreach</a></li>
+	<li><a href="#projects">Projects</a></li>
 	<li><a href="#publications">Publications</a></li>
 	<li><a href="#presentations">Presentations</a></li>
       </ul>
@@ -369,6 +370,18 @@ Assisted with management of a six-week undergraduate research experience at Kenn
 </p>
 
 </div> <!--end outreach container-->
+
+
+
+<div id="projects" class="container">
+  <h3 class="text-center">Projects</h3> 
+<p style="text-align:left"><b>Statistics Analysis through R Code</b> | Ecology Teacher Professional Development<br /> 
+Created instructional statistical analysis code modules for Middle School and High School science teachers to help improve science methodology and educational technology skills. Modules were written in R, a popular statistical analysis language for scientists and were posted using R-fiddle, an online editor which allows for collaborative development and sharing. <br />
+<a href="http://diversityandecology.blogspot.com/" target="_blank">Statistical Analysis Code Modules (blog site)</a>
+</p>
+</div> <!--end outreach container-->
+
+
 
 
 <div id="publications" class="container text-center">
