--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 	<li><a href="#education">Education</a></li>
         <li><a href="#reviews">Reviews</a></li>
 	<li><a href="#outreach">Outreach</a></li>
-	<li><a href="#projects">Projects</a></li>
+	<li><a href="#projects">Recent Projects</a></li>
 	<li><a href="#publications">Publications</a></li>
 	<li><a href="#presentations">Presentations</a></li>
       </ul>
