--- a/index.html
+++ b/index.html
@@ -313,17 +313,17 @@
   <h3>Education</h3>
   <p><em>PhD, Technology | MS, Technology | MS, Horticulture | BS, Biology</em></p>
 
-<p style="text-align:left"><b>PhD, Technology</b><br/>
-Purdue University, College of Technology (now Purdue Polytechnic Institute). Worked with Gary Bertoline at the Envision Center for Data Perceptualization to explore human spatial perception and its relationship to three varieties of spatial ability test scores among video game players. I also created a visuospatial taxonomy to describe video games for research in that field. 
+<p style="text-align:left"><b>PhD, Technology</b> | Purdue University, College of Technology (now Purdue Polytechnic Institute)<br/>
+Worked with Gary Bertoline at the Envision Center for Data Perceptualization to explore human spatial perception and its relationship to three varieties of spatial ability test scores among video game players. I also created a visuospatial taxonomy to describe video games for research in that field. 
 </p>
-<p style="text-align:left"><b>MS, Technology</b><br/>
-Purdue University, College of Technology (now Purdue Polytechnic Institute). Worked with Gary Bertoline at the Envision Center for Data Perceptualization to explore the uses and roles of interactive virtual reality technologies for science education.
+<p style="text-align:left"><b>MS, Technology</b> | Purdue University, College of Technology (now Purdue Polytechnic Institute)<br/>
+Worked with Gary Bertoline at the Envision Center for Data Perceptualization to explore the uses and roles of interactive virtual reality technologies for science education.
 </p>
-<p style="text-align:left"><b>MS, Horticulture</b><br/>
-Purdue University, Department of Horticulture and Landscape Architecture. Worked with plant physiologist Cary A. Mitchell and plant molecular biologist Kashchandra G. Raghothama to explore the presence and characterization of touch-induced gene expression in soybean. 
+<p style="text-align:left"><b>MS, Horticulture</b> | Purdue University, Department of Horticulture and Landscape Architecture<br/>
+Worked with plant physiologist Cary A. Mitchell and plant molecular biologist Kashchandra G. Raghothama to explore the presence and characterization of touch-induced gene expression in soybean. 
 </p>
-<p style="text-align:left"><b>BS, Biology</b><br/>
-Henderson State University, Department of Biology. Focused my studies on plant biology. Worked with field biologist Daniel Marsh and molecular biologist James Engman on undergraduate research projects. 
+<p style="text-align:left"><b>BS, Biology</b> | Henderson State University, Department of Biology. <br/>
+Focused my studies on plant biology. Worked with field biologist Daniel Marsh and molecular biologist James Engman on undergraduate research projects. 
 </p>
 <br/>
 
