--- a/index.html
+++ b/index.html
@@ -372,7 +372,18 @@ Assisted with management of a six-week undergraduate research experience at Kenn
 
 
 <div id="projects" class="container">
-  <h3 class="text-center">Projects</h3> 
+  <h3 class="text-center">Online Public Projects</h3> 
+
+<p style="text-align:left"><b>Vibram Global Locations</b> | Independent Data-driven Design Study<br /> 
+Used html, d3, javascript, and vector graphics to create a new vision for an informative, interactive map design highlighting locations of Vibram resources globally. Improvements were implemented to update inaccurate locational data, weak user engagement, and overall graphic style.<br />
+<a href="https://asantone.github.io/carrarmato/" target="_blank">Vibram Global Locations</a>
+</p>	
+	
+<p style="text-align:left"><b>Pet Statistics</b> | Data-driven website for Data Visualization course<br /> 
+Student team project. Used html, d3, javascript, and vector graphics to create visualizations and content for an interactive website designed to inform users about pet statistics from Seattle. Implementations include a daily registration count calendar, an interactive bar chart of top-ranked pet names, and a Leaflet-based map with custom marker icons for map pins. <br />
+<a href="https://asantone.github.io/BAMJ/" target="_blank">Pet Statistics</a>
+</p>	
+	
 <p style="text-align:left"><b>Statistics Analysis through R Code</b> | Ecology Teacher Professional Development<br /> 
 Created instructional statistical analysis code modules for Middle School and High School science teachers to help improve science methodology and educational technology skills. Modules were written in R, a popular statistical analysis language for scientists and were posted using R-fiddle, an online editor which allows for collaborative development and sharing. <br />
 <a href="http://diversityandecology.blogspot.com/" target="_blank">Statistical Analysis Code Modules (blog site)</a>
