--- a/index.html
+++ b/index.html
@@ -360,6 +360,19 @@ Focused my studies on plant biology. Worked with field biologist Daniel Marsh an
 
 <div id="outreach" class="container">
   <h3 class="text-center">Outreach</h3> 
+
+<p style="text-align:left"><b>Invited Presenter</b> | The Morse Elementary School, Cambridge, MA<br /> 
+Prepared and implemented a presentation for a group of after-school students in grades 2-5. This presentation was part of Computer Science Education Week and focused on input, output, and sensors to convert among various sensory inputs. Students held discussions and created sketches to explain their devices.
+</p>	
+<p style="text-align:left"><b>Invited Presenter</b> | City of Cambridge STEAM It Up!, Cambridge, MA<br /> 
+Table-top presentation to engage young students to create simple circuits. 
+</p>
+<p style="text-align:left"><b>Invited Presenter</b> | Cambridge Public Schools Computer Science Playground, Cambridge, MA<br /> 
+Table-top presentations to engage young students to create simple circuits. Attended all five sessions in middle schools around Cambridge.
+</p>	
+<p style="text-align:left"><b>Invited Judge</b> | Massachusetts State Science \& Engineering Fair, Cambridge, MA<br /> 
+Assessed high school student science fair projects in the Life Sciences category.
+</p>	
 <p style="text-align:left"><b>Fellow, Graduate Students in K-12 Education (GK-12)</b> | National Science Foundation<br /> 
 Prepared and implemented lesson plans for 8th grade students with focus on data visualization and scientific critical thinking skills. My lesson on discovering and visualizing a social network from student-generated simulated virus transmission data was published in a national journal for middle school teachers. 
 </p>
@@ -395,6 +408,7 @@ Created instructional statistical analysis code modules for Middle School and Hi
 
 <div id="publications" class="container text-center">
   <h3>Publications</h3>
+	<p style="text-align:left">Dyehouse, M., Santone, A.L., Kisa, Z., Carr, R.L., and Razzouk, R. (2018). A Novel 3D+MEA Approach to Authentic Engineering Education for Teacher Professional Development: Design Principles and Outcomes. Journal of Pre-College Engineering Education Research (J-PEER): Vol. 9: Iss. 1, Article 4. \url{https://doi.org/10.7771/2157-9288.1168}</p>
 	<p style="text-align:left">Razzouk, R., Dyehouse, M., <b>Santone, A.</b>, and Carr, R. L. (2014). Plants versus Pollutants: An interdisciplinary model-eliciting activity to bring engineering design practices and real-world context to the science classroom. The Science Teacher, 81(9), 43-49.</p>
 	<p style="text-align:left"><b>Santone, A. L.</b> (2009). Visuospatial characterization and analysis of spatial abilities of video game players (Doctoral Dissertation). Purdue University, West Lafayette, IN.</p>
 	<p style="text-align:left">Ertmer, P. A., Stepich, D., Flanagan, S., Kocaman-Karoglu, A., Reiner, C., Reyes, L., <b>Santone, A.</b>, and Ushigusa, S. (2009). Impact of Guidance on the Problem-Solving Efforts of Instructional Design Novices. Performance Improvement Quarterly, 21(4), 117-132.</p>
