--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@ Used html, d3, javascript, and vector graphics to create a new vision for an inf
 </p>	
 	
 <p style="text-align:left"><b>Pet Statistics</b> | Data-driven website for Data Visualization course<br /> 
-Student team project. Used html, d3, javascript, and vector graphics to create visualizations and content for an interactive website designed to inform users about pet statistics from Seattle. Implementations include a daily registration count calendar, an interactive bar chart of top-ranked pet names, and a Leaflet-based map with custom marker icons for map pins. <br />
+Team Leader, Student team project. Used html, d3, javascript, and vector graphics to create visualizations and content for an interactive website designed to inform users about pet statistics from Seattle. Implementations include a daily registration count calendar, an interactive bar chart of top-ranked pet names, and a Leaflet-based map with custom marker icons for map pins. <br />
 <a href="https://asantone.github.io/BAMJ/" target="_blank">Pet Statistics</a>
 </p>	
 	
@@ -408,7 +408,7 @@ Created instructional statistical analysis code modules for Middle School and Hi
 
 <div id="publications" class="container text-center">
   <h3>Publications</h3>
-	<p style="text-align:left">Dyehouse, M., Santone, A.L., Kisa, Z., Carr, R.L., and Razzouk, R. (2018). A Novel 3D+MEA Approach to Authentic Engineering Education for Teacher Professional Development: Design Principles and Outcomes. Journal of Pre-College Engineering Education Research (J-PEER): Vol. 9: Iss. 1, Article 4. \url{https://doi.org/10.7771/2157-9288.1168}</p>
+	<p style="text-align:left">Dyehouse, M., <b>Santone, A.L.</b>, Kisa, Z., Carr, R.L., and Razzouk, R. (2018). A Novel 3D+MEA Approach to Authentic Engineering Education for Teacher Professional Development: Design Principles and Outcomes. Journal of Pre-College Engineering Education Research (J-PEER): Vol. 9: Iss. 1, Article 4. \url{https://doi.org/10.7771/2157-9288.1168}</p>
 	<p style="text-align:left">Razzouk, R., Dyehouse, M., <b>Santone, A.</b>, and Carr, R. L. (2014). Plants versus Pollutants: An interdisciplinary model-eliciting activity to bring engineering design practices and real-world context to the science classroom. The Science Teacher, 81(9), 43-49.</p>
 	<p style="text-align:left"><b>Santone, A. L.</b> (2009). Visuospatial characterization and analysis of spatial abilities of video game players (Doctoral Dissertation). Purdue University, West Lafayette, IN.</p>
 	<p style="text-align:left">Ertmer, P. A., Stepich, D., Flanagan, S., Kocaman-Karoglu, A., Reiner, C., Reyes, L., <b>Santone, A.</b>, and Ushigusa, S. (2009). Impact of Guidance on the Problem-Solving Efforts of Instructional Design Novices. Performance Improvement Quarterly, 21(4), 117-132.</p>
