--- a/index.html
+++ b/index.html
@@ -385,8 +385,28 @@ Assisted with management of a six-week undergraduate research experience at Kenn
 
 
 <div id="projects" class="container">
-  <h3 class="text-center">Online Public Projects</h3> 
+  <h3 class="text-center">Projects</h3> 
 
+<p style="text-align:left"><b>Maker Spaces Map</b> | Boston Metro Area<br /> 
+<img src="../graphics/img/dataScience/msMap.png" alt="Maker Spaces Map" height="100">This map highlights the locations of maker spaces in the Boston area. A second tab on the dashboard provides data on each space. Information about each space and locational data are pulled from a single .csv file.<br />
+</p>	
+
+<p style="text-align:left"><b>Demographics Map</b> | Middlesex County, MA<br /> 
+<img src="../graphics/img/dataScience/cambridgeDemographics.png" alt="Demographics Map" height="100"> This map highlights demographics of interest in Middlesex County, Massachusetts. Data source: American Community Survey.<br />
+</p>
+
+<p style="text-align:left"><b>Prize Map</b> | Lemelson-MIT Student Prize Winners<br /> 
+<img src="../graphics/img/dataScience/studentPrizeLoc.png" alt="Student Prize Map" height="100"> This map indicates the locations of past Lemelson-MIT Student Prize winners.<br />
+</p>
+	
+<p style="text-align:left"><b>InvenTeams Map</b> | Lemelson-MIT InvenTeams<br /> 
+<img src="../graphics/img/dataScience/itLoc2019.png" alt="InvenTeams Map" height="100">This map shows the locations of past Lemelson-MIT InvenTeams.<br />
+</p>
+	
+<p style="text-align:left"><b>LemelsonX Growth</b> | 2018 Membership<br /> 
+<img src="../graphics/img/dataScience/lemelsonx2018.png" alt="LemelsonX Growth" height="100">This plot depicts growth in membership of the LemelsonX community over 2018.<br />
+</p>	
+		
 <p style="text-align:left"><b>Vibram Global Locations</b> | Independent Data-driven Design Study<br /> 
 Used html, d3, javascript, and vector graphics to create a new vision for an informative, interactive map design highlighting locations of Vibram resources globally. Improvements were implemented to update inaccurate locational data, weak user engagement, and overall graphic style.<br />
 <a href="https://asantone.github.io/carrarmato/" target="_blank">Vibram Global Locations</a>
