--- a/index.html
+++ b/index.html
@@ -388,23 +388,23 @@ Assisted with management of a six-week undergraduate research experience at Kenn
   <h3 class="text-center">Projects</h3> 
 
 <p style="text-align:left"><b>Maker Spaces Map</b> | Boston Metro Area<br /> 
-<img src="../graphics/img/dataScience/msMap.png" alt="Maker Spaces Map" height="100">This map highlights the locations of maker spaces in the Boston area. A second tab on the dashboard provides data on each space. Information about each space and locational data are pulled from a single .csv file.<br />
+<a href="../graphics/img/dataScience/msMap.png" target="_blank">This map</a> highlights the locations of maker spaces in the Boston area. A second tab on the dashboard provides data on each space. Information about each space and locational data are pulled from a single .csv file.<br />
 </p>	
 
 <p style="text-align:left"><b>Demographics Map</b> | Middlesex County, MA<br /> 
-<img src="../graphics/img/dataScience/cambridgeDemographics.png" alt="Demographics Map" height="100"> This map highlights demographics of interest in Middlesex County, Massachusetts. Data source: American Community Survey.<br />
+<a href="../graphics/img/dataScience/cambridgeDemographics.png" target="_blank">This map</a> highlights demographics of interest in Middlesex County, Massachusetts. Data source: American Community Survey.<br />
 </p>
 
 <p style="text-align:left"><b>Prize Map</b> | Lemelson-MIT Student Prize Winners<br /> 
-<img src="../graphics/img/dataScience/studentPrizeLoc.png" alt="Student Prize Map" height="100"> This map indicates the locations of past Lemelson-MIT Student Prize winners.<br />
+<a href="../graphics/img/dataScience/studentPrizeLoc.png" target="_blank">This map</a> indicates the locations of past Lemelson-MIT Student Prize winners.<br />
 </p>
 	
 <p style="text-align:left"><b>InvenTeams Map</b> | Lemelson-MIT InvenTeams<br /> 
-<img src="../graphics/img/dataScience/itLoc2019.png" alt="InvenTeams Map" height="100">This map shows the locations of past Lemelson-MIT InvenTeams.<br />
+<a href="../graphics/img/dataScience/itLoc2019.png" target="_blank">This map</a> shows the locations of past Lemelson-MIT InvenTeams.<br />
 </p>
 	
 <p style="text-align:left"><b>LemelsonX Growth</b> | 2018 Membership<br /> 
-<img src="../graphics/img/dataScience/lemelsonx2018.png" alt="LemelsonX Growth" height="100">This plot depicts growth in membership of the LemelsonX community over 2018.<br />
+<a href="../graphics/img/dataScience/lemelsonx2018.png" target="_blank">This plot</a> depicts growth in membership of the LemelsonX community over 2018.<br />
 </p>	
 		
 <p style="text-align:left"><b>Vibram Global Locations</b> | Independent Data-driven Design Study<br /> 
