--- a/index.html
+++ b/index.html
@@ -387,6 +387,14 @@ Assisted with management of a six-week undergraduate research experience at Kenn
 <div id="projects" class="container">
   <h3 class="text-center">Projects</h3> 
 
+<p style="text-align:left"><b>JV InvenTeams Reporting</b> | Internal Reports Generation<br /> 
+Used R Markdown to produce internal reports for the Lemelson-MIT JV InvenTeams Program. Reports included metrics such as unique and total downloads over time and analyses of self-reported information provided by users through a web form. This task was undertaken to bring clarity, focus, and repeatability to prior analysis and reporting methods.<br />
+</p>	
+	
+<p style="text-align:left"><b>Area Jobs Analysis</b> | Cambridge, MA<br /> 
+Used Python, HTML, and CSS in a collaborative project with a computer science intern. Together, we devised an internal-use tool to gather data about area job postings and format the results into a highly legible web interface for analysis. This tool was requested to provide insight into area needs in the Tech jobs sector.<br />
+</p>
+	
 <p style="text-align:left"><b>Maker Spaces Map</b> | Boston Metro Area<br /> 
 <a href="../graphics/img/dataScience/msMap.png" target="_blank">This map</a> highlights the locations of maker spaces in the Boston area. A second tab on the dashboard provides data on each space. Information about each space and locational data are pulled from a single .csv file. The map was created to examine the volume, density, and location of these spaces to provide insight into programmatic decisions.<br />
 </p>	
