--- a/index.html
+++ b/index.html
@@ -391,8 +391,12 @@ Assisted with management of a six-week undergraduate research experience at Kenn
 Used R Markdown to produce internal reports for the Lemelson-MIT JV InvenTeams Program. Reports included metrics such as unique and total downloads over time and analyses of self-reported information provided by users through a web form. This task was undertaken to bring clarity, focus, and repeatability to prior analysis and reporting methods.<br />
 </p>	
 	
+<p style="text-align:left"><b>Student Inventor Search</b> | USA<br /> 
+Used Python, HTML, and CSS in a collaborative project with a computer science intern. Together, we devised an internal-use tool to gather data about student inventors and format the results into a highly legible web interface for analysis. This tool was requested to provide assistance for research tasks.<br />
+</p>
+	
 <p style="text-align:left"><b>Area Jobs Analysis</b> | Cambridge, MA<br /> 
-Used Python, HTML, and CSS in a collaborative project with a computer science intern. Together, we devised an internal-use tool to gather data about area job postings and format the results into a highly legible web interface for analysis. This tool was requested to provide insight into area needs in the Tech jobs sector.<br />
+Used Python, HTML, and CSS in a collaborative project with a computer science intern. Together, we devised an internal-use tool to gather and analyze data about locally-available jobs. This tool was requested to provide insight into area needs in the Tech jobs sector.<br />
 </p>
 	
 <p style="text-align:left"><b>Maker Spaces Map</b> | Boston Metro Area<br /> 
