--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@ Used Python, HTML, and CSS in a collaborative project with a computer science in
 </p>
 	
 <p style="text-align:left"><b>Area Jobs Analysis</b> | Cambridge, MA<br /> 
-Used Python, HTML, and CSS in a collaborative project with a computer science intern. Together, we devised an internal-use tool to gather and analyze data about locally-available jobs. This tool was requested to provide insight into area needs in the Tech jobs sector.<br />
+Used Python, R, and Excel in a collaborative project with a computer science intern. Together, we devised an internal-use tool to gather and analyze data about locally-available jobs. This tool was requested to provide insight into area needs in the Tech jobs sector.<br />
 </p>
 	
 <p style="text-align:left"><b>Maker Spaces Map</b> | Boston Metro Area<br /> 
